mise en place de cal-heatmap

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="datetime">
             <span class="fa fa-clock-o fa-lg date" id="pomodoro"></span>
-            <div id="cal-heatmap"></div>
+            <div id="cal-heatmap" class="cal-heatmap-container"></div>
         </div>
 
         <div class="config">
