CalHeatMap maison ! partie 1

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         <title>podati</title>
 
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="node_modules//cal-heatmap/cal-heatmap.css">
-
         <link rel="stylesheet" href="style.css">
 
     </head>
@@ -42,7 +39,7 @@
 
         <div class="datetime">
             <span class="fa fa-clock-o fa-lg date" id="pomodoro"></span>
-            <div id="cal-heatmap" class="cal-heatmap-container"></div>
+            <div id="calheatmap"></div>
         </div>
 
         <div class="config">
@@ -78,9 +75,7 @@
             window.jQuery || document.write('<script src="node_modules/jquery/dist/jquery.min.js"><\/script>')
         </script>
 
-        <script src="node_modules/d3/d3.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="node_modules/cal-heatmap/cal-heatmap.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
