Suppression dépendance à Materialize

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="node_modules//cal-heatmap/cal-heatmap.css">
 
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="config.css.">
 
     </head>
 
@@ -73,11 +74,9 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/d3/d3.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="materialize.js"></script>
         <script src="node_modules/cal-heatmap/cal-heatmap.js"></script>
         <script src="debug.js"></script>
-        <!--script src="config.js"></script-->
+        <script src="config.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
