--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="config.css.">
+        <link rel="stylesheet" href="config.css">
 
     </head>
 
@@ -73,6 +73,7 @@
 
         <script src="debug.js"></script>
         <script src="config.js"></script>
+        <script src="calheatmap.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
