--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <canvas class="counter" id="myCanvas" width="75" height="75"></canvas>
             <canvas class="counter2" id="myCanvas2" width="125" height="75"></canvas>
 
-            <span class="fa fa-play-circle startstop fa-4x" id="watch" value="Stop"></span>
+            <span class="fa fa-play-circle startstop fa-4x" id="watch"></span>
             <span class="fa fa-times       quit fa-lg"></span>
 
             <span class="fa fa-gear     conf fa-lg" id="conf"></span>
