Centrage page pomodoro

--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
 
     <body>
         <div class="pomodoro">
-            <canvas class="counter" id="myCanvas" width="75" height="75"></canvas>
-            <canvas class="counter2" id="myCanvas2" width="125" height="75"></canvas>
-
-            <span class="fa fa-play-circle startstop fa-4x" id="watch"></span>
-
             <span class="bt-ctrl fa fa-times    quit fa-lg"></span>
             <span class="bt-ctrl fa fa-cogs     conf fa-lg" id="conf"></span>
             <span class="bt-ctrl fa fa-calendar calheatmap fa-lg" id="calendar"></span>
 
-            <span class="fa fa-circle-o pomodori pomodori1"></span>
-            <span class="fa fa-circle-o pomodori pomodori2"></span>
-            <span class="fa fa-circle-o pomodori pomodori3"></span>
-            <span class="fa fa-circle-o pomodori pomodori4"></span>
-            <span class="fa fa-circle-o pomodori pomodori5"></span>
-            <span class="fa fa-circle-o pomodori pomodori6"></span>
-            <span class="fa fa-circle-o pomodori pomodori7"></span>
-            <span class="fa fa-circle-o pomodori pomodori8"></span>
+            <div class="grp_pomodoro">
+                <canvas class="counter" id="myCanvas" width="75" height="75"></canvas>
+                <canvas class="counter2" id="myCanvas2" width="125" height="75"></canvas>
+
+                <span class="fa fa-play-circle startstop fa-4x" id="watch"></span>
+
+                <span class="fa fa-circle-o pomodori pomodori1"></span>
+                <span class="fa fa-circle-o pomodori pomodori2"></span>
+                <span class="fa fa-circle-o pomodori pomodori3"></span>
+                <span class="fa fa-circle-o pomodori pomodori4"></span>
+                <span class="fa fa-circle-o pomodori pomodori5"></span>
+                <span class="fa fa-circle-o pomodori pomodori6"></span>
+                <span class="fa fa-circle-o pomodori pomodori7"></span>
+                <span class="fa fa-circle-o pomodori pomodori8"></span>
+            </div>
         </div>
 
         <div class="datetime">
