--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
 
@@ -70,9 +70,9 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 
-        <script src="debug.js"></script>
-        <script src="config.js"></script>
-        <script src="calheatmap.js"></script>
-        <script src="script.js"></script>
+        <script src="js/debug.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/calheatmap.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
